app/assets/stylesheets/components/filters.scss
//**************************************************
// variables
//**************************************************
$activeBackgroundColour: $primary;
$activeTextColour: white;

//**************************************************
// filters
//**************************************************
.filter {
  margin-right: rem-calc(20);

  display: inline-block;
  position: relative;

  &__title {
    font-size: rem-calc(20);
    margin-right: rem-calc(20);
  }

//**************************************************
// button
//**************************************************
  &__button {
    border: solid rem-calc(1) $black;
    color: $black;
    cursor: pointer;
    font-weight: $bold;
    margin: 0;
    padding:rem-calc(9 39 10 13);

    position: relative;

    &:hover { 
      background-color: $activeBackgroundColour;
      border-color: $activeBackgroundColour;
      color: $activeTextColour;

      &:after { background-image: image-url('icons/arrow-down-white.svg'); }
    }

    &:after {
      @extend .vertical-center;
      background-image: image-url('icons/arrow-down-black.svg');
      content: '';
      width: rem-calc(8); height: rem-calc(6);

      right: rem-calc(24);
    }
    
    &--active {
      background-color: $activeBackgroundColour;
      border-color: $activeBackgroundColour;
      color: $activeTextColour;     

      &:after,
      &:hover:after { background-image: image-url('icons/arrow-up-white.svg'); }
    }

    &--has-selected {
      background-color: $activeBackgroundColour;
      color: $activeTextColour;
      
      &:after,
      &:hover:after { content: none; }
    }

      &-total {
        $total-width: rem-calc(24);

        @extend .vertical-center;
        background-color: $activeTextColour;
        border-radius: 100%;
        color: $activeBackgroundColour;
        font-size: rem-calc(18);
        line-height: $total-width;
        text-align: center;
        width: $total-width; height: $total-width;

        display: block;

        position: absolute;
        right: rem-calc(9);
      }
  }

//**************************************************
// options
//**************************************************
  &__options {
    background-color: white;
    border: solid rem-calc(1) $black;
    border-radius: $global-radius;
    font-size: rem-calc(16);
    margin-top: rem-calc(18);
    padding: rem-calc(30 25);
    min-width: rem-calc(300);

    display: none;
    position: absolute;
    z-index: 1;

    &--active {
      display: block;
    }

    &-list {
      margin-bottom: rem-calc(20);
      max-height: rem-calc(300);
      overflow-y: scroll;
      overflow-x: hidden; //for IE11
      white-space: nowrap; 
    }

    &--donors {
      column-count: 2;
      flex-wrap: wrap;
      width: 928px;
      white-space: normal;

      display: flex;

      li {
        flex: 1 0 50%;

        float: left;
      }
    }
    
    &--category { max-width: rem-calc(803); }
    &--country { max-width: rem-calc(480); }
    &--ocean-region { max-width: rem-calc(300); }
  }

    &__option {
      font-size: rem-calc(16);
      margin-bottom: rem-calc(16);
      padding: rem-calc(0 20 0 38);
      width: 100%;

      display: block;
      position: relative;

      label { cursor: pointer; }
    }

//**************************************************
// checkbox
//**************************************************
      &__checkbox {
        border: solid rem-calc(1) $grey;
        cursor: pointer;
        width: rem-calc(22); height: rem-calc(22);

        -webkit-appearance: none;
        -moz-appearance: none;
        -ms-appearance: none;

        display: block;
        position: absolute;
        top: rem-calc(-2);
        left: 0;

        &--active:after {
          background: $primary image-url('icons/tick.svg') center no-repeat;
          content: '';
          width: rem-calc(20); height: rem-calc(20);

          display: block;
        }
      }

      &_checkbox-label {
        display: inline-block;
      }

  &__buttons {
    margin-top: rem-calc(18);
    text-align: right;
  }
}

